Update project - Including new celery tasks integrations

--- a/app/services/run_assstant_analysis.ipynb
+++ b/app/services/run_assstant_analysis.ipynb
@@ -19,7 +19,7 @@
     "load_dotenv()\n",
     "from marvin.beta.assistants.runs import Run\n",
     "\n",
-    "    from app.schemas.property import Property\n",
+    "    from app.schemas.real_estate import Property\n",
     "from app.services.assistants.geo_assistant import geo_assistant\n"
    ],
    "outputs": [],
@@ -521,7 +521,7 @@
     "load_dotenv()\n",
     "from marvin.types import ChatResponse\n",
     "\n",
-    "from app.schemas.property import Property"
+    "from app.schemas.real_estate import Property"
    ],
    "id": "b04cda1c19af3acd",
    "outputs": [],
@@ -585,7 +585,7 @@
    "cell_type": "code",
    "source": [
     "from app.utils.custom_marvin.custom_marvin_extractor import extract_from_image\n",
-    "from app.schemas.property import Property\n",
+    "from app.schemas.real_estate import Property\n",
     "properties = []\n",
     "\n",
     "prop = property.copy()\n",
