Update project - Including all endpoints

--- a/app/services/run_assstant_analysis.ipynb
+++ b/app/services/run_assstant_analysis.ipynb
@@ -584,7 +584,7 @@
    },
    "cell_type": "code",
    "source": [
-    "from app.utils.custom_marvin.custom_marvin_extractor import extract_from_image\n",
+    "from app.utils.custom_marvin.custom_marvin_extractor import custom_data_extractor\n",
     "from app.schemas.real_estate import Property\n",
     "properties = []\n",
     "\n",
@@ -596,7 +596,7 @@
     "for ao in assistant_only:\n",
     "    all_messages.append(ao.content[0].text.value)\n",
     "    \n",
-    "results: ChatResponse = extract_from_image(\n",
+    "results: ChatResponse = custom_data_extractor(\n",
     "    f\"<property>{prop.json()}</property> <data_to_extract>{'\\n'.join(all_messages)}</data_to_extract>\",\n",
     "    target=Property,\n",
     "    instructions=\"You are an intelligent AI assistant specialized in extracting geolocation, spatial, and neighborhood data about real estate properties. Please structure the output according to the specified schema.\",\n",
